Fixed for smaller devices horizontal scroll issues with small devices is resolved.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./css/style_timeline.css">
     <link rel="stylesheet" href="./css/card.css">
     <script src="https://kit.fontawesome.com/4b9dbb5e12.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Maharjan portfolio Page</title>
+    <link rel="icon" type="image/x-icon" href="./images/logo.ico">
 </head>
 <body>
     <header id ="top" >
@@ -31,6 +32,7 @@
                 <a target="_blank" href="mailto:rojanmhj@gmail.com">
                     <i class="fa-regular fa-envelope"></i>
                 </a>
+                <a target="_blank" href="https://goo.gl/maps/mZHqEKtMY3o8US497"><i class="fa-solid fa-location-dot"></i></a>
 
             </div></li>
          </ul>
