Changes with the experience Added experience as student assistant

--- a/index.html
+++ b/index.html
@@ -97,9 +97,24 @@
         <div class="exp-container">
         <div class="content">
             <div class="exp-name">
+                <h1>Hornet Hospitality</h1> <p>Sep 2022 - present </p>
+            </div>
+            <p class="loc">Student Assistant</p>
+            <p class="loc">Sacramento state University</p>
+            <div class="exp-desc">
+               <p> •Maintain excellent customer service and positive attitude towards guest, customers, clients and co-workers.</p>
+               <p>• Prepared signs, posters, and mailings and assisted with other tasks for events at Sac State University.</p>
+               <p>• Maintain all serving schedules; ensure that all food items are served per menu specifications in a safe and appropriate manner following department policies and procedures.</p>
+            </div>
+            
+
+        </div>
+        <div class="content">
+            <div class="exp-name">
                 <h1>Rolang Technologies</h1> <p>June 2022 - Aug 2022 </p>
             </div>
             <p class="loc">Data Engineer Intern</p>
+            <p class="loc">McKinney, Texas</p>
             <div class="exp-desc">
                 <p>• Built a migration pipeline from Oracle database to ADLS gen 2 using Stream Sets pipelines which helped in scaling database for future.</p>
                    <p> • Maintain optimal data processing pipeline architecture using PySpark and Azure Data Factory to reduce time complexity by 3 hours.</p>
