added some experience

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                 </div>
                 <div class="card-title"><h1>Drug Review Prediction</h1></div>
                 <div class="card-description">
-                   <p>• Trained CNN, DNN, logistic regression and SVC to classify whether the sentiment of a drug review is positive with an accuracy of 92%.
-                     SMOTE technique for sampling the imbalanced dataset which increased the accuracy of the model by 8%. 
+                   <p>• Trained CNN, DNN, logistic regression and SVC to classify whether the sentiment of a drug review is positive with an accuracy of 92%. </p>
+                    <p>• SMOTE technique for sampling the imbalanced dataset which increased the accuracy of the model by 8%. 
                      </p>
                 </div>
                 <div class="card-tech">
@@ -154,8 +154,8 @@
                 </div>
                 <div class="card-title"><h1>NewYork Taxi Dataset</h1></div>
                 <div class="card-description">
-                   <p> Data Ingestion, cleaning, validation, and processing data using ADF.
-                    • Visualized key statistics like customer trends and average tip per mile driven by neighborhood and by time in user friendly dashboards
+                   <p> • Data Ingestion, cleaning, validation, and processing data using ADF.</p>
+                   <p> • Visualized key statistics like customer trends and average tip per mile driven by neighborhood and by time in user friendly dashboards
                      </p>
                 </div>
                 <div class="card-tech">
@@ -170,7 +170,7 @@
                 </div>
                 <div class="card-title"><h1>Scheduling Application</h1></div>
                 <div class="card-description">
-                   <p>Working with a yea rlong senior project with team of five people to create a scheduling app for a client.  </p>
+                   <p>• Working with a yea rlong senior project with team of five people to create a scheduling app for a client.  </p>
                 </div>
                 <div class="card-tech">
                    <p> Angular js, Vendia (cloud), Spring boot, Jest </p>
@@ -184,26 +184,27 @@
                 </div>
                 <div class="card-title"><h1>Fake News Detector</h1></div>
                 <div class="card-description">
-                   <p> NLP model to detect a sentiment on a news with GIFs </p>
+                   <p>• NLP model to detect a sentiment on a news with GIFs </p>
                 </div>
                 <div class="card-tech">
                    <p> Flask, Tokenizer, Tensorflow, LSTM </p>
                 </div>
             </div>
-            <!-- <div class="card">
+            <div class="card">
                 <div class="card-header">
                     <a target="_blank" href="https://github.com/Rojanmhj2055">
                         <i class="fa-brands fa-github fa-1x"></i>
                     </a>
                 </div>
-                <div class="card-title"><h1>Project Name</h1></div>
+                <div class="card-title"><h1>KPMG Sprocket Central pvt ltd dataset</h1></div>
                 <div class="card-description">
-                   <p> Small description </p>
+                   <p>• Virtual internship</p>
+                   <p>• Data exploration, model development, Interpretation and Identifying data quality issues and 1000 customers to target for an ad.</p>
                 </div>
                 <div class="card-tech">
-                   <p> Technologies used </p>
+                   <p> Excel, Pandas, Matplotlib, Kmeans Clustering </p>
                 </div>
-            </div> -->
+            </div>
         </div>
     </section>
     <section id="contact">
