Added datafest project

--- a/index.html
+++ b/index.html
@@ -132,6 +132,23 @@
         <div class="project-container">
             <div class="card">
                 <div class="card-header">
+                    <a target="_blank" href="https://github.com/jshifman/DataFest-22">
+                        <i class="fa-brands fa-github fa-1x"></i>
+                    </a>
+                </div>
+                <div class="card-title"><h1>American Statistical Association DataFest 2022</h1></div>
+                <div class="card-description">
+                  <p>@Chico State University</p>
+                    <p>• After two days of intense data wrangling, analysis, and presentation design, each team is allowed a few minutes and no more than two slides to impress a panel of judges. 
+                       <p><i class="fa-solid fa-trophy"></i>Our group won Best Visualization Award</p>
+                     </p>
+                </div>
+                <div class="card-tech">
+                   <p> Python, TensorFlow, Keras  </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <a target="_blank" href="https://github.com/Rojanmhj2055/Drug-Review-Prediction">
                         <i class="fa-brands fa-github fa-1x"></i>
                     </a>
