--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
                 <a target="_blank" href="mailto:rojanmhj@gmail.com">
                     <i class="fa-regular fa-envelope"></i>
                 </a>
-                <a target="_blank" href="https://goo.gl/maps/mZHqEKtMY3o8US497"><i class="fa-solid fa-location-dot"></i></a>
+                <a target="_blank" href="https://goo.gl/maps/mZHqEKtMY3o8US497">
+                    <i class="fa-solid fa-location-dot"></i>
+                </a>
 
+                    <a id="nightmode" class="day" onclick="nightMode()"><i id="nighticon" class="fa-regular fa-moon fa-xl"></i></a>
             </div></li>
          </ul>
          <div class="intro">
@@ -61,10 +64,12 @@
             </li>
             <li><b>Machine Learning: </b>   Scikit-learn, Keras, Pandas, NumPy, SciPy, TensorFlow, PySpark</li>
              <li> <b>Visualization: </b>   Tableau, Matplotlib, seaborn </li>
-            <li><b>Cloud technologies:</b>Azure, AWS </li>
-             <li><b>Testing: </b> Jest, Selenium </li>
-            <li><b>Frameworks: </b>Node js, SQL, Docker, Angular js, Vendia, Kubernetes </li>
-            <li><b>Other Skills: </b> Git, JIRA, Confluence, Agile/Hybrid Methodology, SDLC </li>
+            <li><b>Cloud technologies:</b> Micorsoft Azure, AWS, SnowFlake </li>
+             <li><b>Testing: </b> Jest, Selenium, Postman </li>
+             <li><b>Database:</b> SQL, Mongo DB, Cassandra</li>
+            <li><b>Frameworks: </b> Docker, Node js,Angular js, Kubernetes </li>
+            <li><b>Project Managemen: </b>Git, JIRA, Confluence</li>
+            <li><b>Other Skills: </b> Apache Airflow, Apache Kafka, StreamSets </li>
             <!-- <li><b>Certifications: </b>Microsoft Certified Associate Data Engineer </li> -->
 
         </ul>
@@ -72,7 +77,9 @@
        <div class="certification">
         <h3>Certifications</h3>
         <div class="cert reveal">
-            <a href="https://www.linkedin.com/in/rojan-maharzan-203561180/" target="_blank"><img src="./images/azure-data-engineer-associate-600x600.png"></a>
+            <a href="https://www.linkedin.com/in/rojan-maharzan-203561180/" target="_blank">
+                <img src="./images/azure-data-engineer-associate-600x600.png">
+            </a>
             <a href="https://www.udemy.com/certificate/UC-49c475fa-35ff-4402-9ef4-9c100d2794cb/" target="_blank"><img src="./images/node-js.png"></a>
             <a href="https://www.hackerrank.com/certificates/041c6db2c617" target="_blank"><img src="./images/angularjs.png"></a>
             <a><img src="./images/TensorFlow_logo.png"></a>
@@ -107,7 +114,7 @@
     <section id ="experience">
        
         <div class="exp-container">
-        <div class="content">
+        <div class="content reveal">
             <div class="exp-name">
                 <h1>Hornet Hospitality</h1> <p>Sep 2022 - present </p>
             </div>
@@ -121,7 +128,7 @@
             
 
         </div>
-        <div class="content">
+        <div class="content reveal">
             <div class="exp-name">
                 <h1>Rolang Technologies</h1> <p>June 2022 - Aug 2022 </p>
             </div>
