Added new projects

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
        <div class="certification">
         <h3>Certifications</h3>
         <div class="cert reveal">
-            <a href="https://www.linkedin.com/in/rojan-maharzan-203561180/" target="_blank">
+            <a href="https://www.linkedin.com/in/rojan-maharjan-203561180/" target="_blank">
                 <img src="./images/azure-data-engineer-associate-600x600.png">
             </a>
             <a href="https://www.udemy.com/certificate/UC-49c475fa-35ff-4402-9ef4-9c100d2794cb/" target="_blank"><img src="./images/node-js.png"></a>
@@ -163,6 +163,38 @@
     <section id="projects">
         <h1 class="project-title">Projects</h1>
         <div class="project-container">
+            <div class="card">
+                <div class="card-header">
+                    <a target="_blank" href="https://github.com/jshifman/DataFest-22">
+                        <i class="fa-brands fa-github fa-1x"></i>
+                    </a>
+                </div>
+                <div class="card-title"><h1>Data Migration Project</h1></div>
+                <div class="card-description">
+                    <p>•Migrated 237k data points from My SQL to SnowFlake using Stream Sets data loader with a 99.9% success rate, reducing data processing time by 50%.
+                     </p>
+                     <p>•Implemented advanced monitoring techniques during the migration process to ensure zero loss of vital information and maintained full-time availability of business-critical data.</p>
+                </div>
+                <div class="card-tech">
+                   <p> SnowFlake, Stream Sets, Python, My SQL</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <a target="_blank" href="https://github.com/Rojanmhj2055/store-sales-pipeline">
+                        <i class="fa-brands fa-github fa-1x"></i>
+                    </a>
+                </div>
+                <div class="card-title"><h1>Store Sales Pipeline</h1></div>
+                <div class="card-description">
+                    <p>•Developed automated SQL scripts to generate daily and weekly sales reports, reducing manual processing time by 80%.
+                     </p>
+                     <p>•Scheduled pipeline using Apache Airflow DAGs triggered every day and weekly.</p>
+                </div>
+                <div class="card-tech">
+                   <p> Python, SQL, Airflow </p>
+                </div>
+            </div>
             <div class="card">
                 <div class="card-header">
                     <a target="_blank" href="https://github.com/jshifman/DataFest-22">
@@ -287,7 +319,7 @@
                 <a target="_blank" href="https://github.com/Rojanmhj2055">
                     <i class="fa-brands fa-github"></i>
                 </a>
-                <a target="_blank" href="https://www.linkedin.com/in/rojan-maharzan-203561180/">
+                <a target="_blank" href="https://www.linkedin.com/in/rojan-maharjan-203561180/">
                     <i class="fa-brands fa-linkedin"></i>
                 </a>
                 <a target="_blank" href="mailto:rojanmhj@gmail.com">
