--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </a>
             <a href="https://www.udemy.com/certificate/UC-49c475fa-35ff-4402-9ef4-9c100d2794cb/" target="_blank"><img src="./images/node-js.png"></a>
             <a href="https://www.hackerrank.com/certificates/041c6db2c617" target="_blank"><img src="./images/angularjs.png"></a>
-            <a><img src="./images/TensorFlow_logo.png"></a>
+            <a><img src="./images/AWS-Certified-Solutions-Architect-Associate_badge.png"></a>
             <a href="https://www.udemy.com/certificate/UC-2fe5f640-93e1-4da8-9539-f40b80499fa0/" target="_blank"><img src="./images/tableau.png"></a>
             
         </div>
